fix(daemon): spawn via the app's native launcher in packaged builds (#315)
* fix(daemon): spawn via the app's native launcher in packaged builds

Packaged jpackage bundles ship NO bin/java (the app boots through its
native launcher + libjli), so DaemonLauncher.buildCommand() returned null
in every installed build: the daemon never spawned, LoginServiceManager
silently failed, the GUI silently fell back to in-process MCP, and the
menu-bar terminal icon never appeared. The daemon only ever worked from
dev (gradlew run) where a real JDK provides bin/java.

- DaemonLauncher: when no java binary exists, relaunch the app's own
  native launcher with --daemon (macOS/Windows/Linux jpackage layouts),
  forwarding runtime props as --prop:key=value program args.
- Main.kt: dispatch --daemon to runDaemon() before any AWT/Compose init,
  setting apple.awt.UIElement programmatically (menu-bar-only agent).
- DaemonMain: expose runDaemon() so the GUI facade can call it (two
  file-level mains in one package can't reference each other).
- DaemonSettingsSection: surface login-service install failures in the
  status area instead of swallowing them.

Generated with [Claude Code](https://claude.com/claude-code)

* review: pure per-OS launcher derivation, GUI relaunch parity, name-preferred pick

- packagedLauncherBinary's per-OS branches are now pure functions of
  java.home (mac/windows/linuxLauncher) with no current-OS checks inside,
  so ALL layouts are unit-tested regardless of the CI platform.
- pickLauncher prefers the jpackage-named launcher (app/install dir name,
  case-insensitive) over a sole-executable guess, and warns instead of
  silently returning null when several unnamed candidates exist.
- buildGuiCommand falls back to the native launcher too, closing the
  mirror-image no-bin/java gap in openGui() on packaged Windows/Linux.
- Shared macBundleFile helper (macAppBundlePath re-parsed the same path)
  and buildGuiCommand reuses PASSTHROUGH_PROPS instead of an inline copy.