@@ -16,13 +16,22 @@ import java.io.File
  * compatibility is gated on [DaemonControlChannel.PROTOCOL_VERSION] instead — bump it on any
  * incompatible daemon change so [DaemonClient] refuses a stale daemon rather than attaching to it.
  *
- * Recipe (works identically under `gradlew run` and a packaged `.app`/`.deb`/`.exe`):
+ * Two launch recipes, tried in order:
+ *
+ * 1. `java -cp …` (dev / `gradlew run`, or any runtime that ships a launcher binary):
  *   - JRE: `<java.home>/bin/java` (mac/Linux), `<java.home>/bin/javaw.exe` (Windows, no console).
- *   - Classpath: `System.getProperty("java.class.path")` verbatim — jpackage sets it to the full
- *     app jar list, which already includes the daemon's main class and all of compose-ui.
- *   - Props propagated: headless + version + settings-dir + bundled-resources dir, so the daemon
+ *   - Classpath: `System.getProperty("java.class.path")` verbatim.
+ *   - Props propagated: UIElement + version + settings-dir + bundled-resources dir, so the daemon
  *     resolves the same files ([BossTermPaths]) and finds bundled binaries (cloudflared, CLI).
  *   - The daemon does NOT need the GUI's AWT `--add-opens` flags (it runs headless).
+ *
+ * 2. The app's own native launcher with [DAEMON_ARG] (packaged `.app`/`.exe`/`.deb`): jpackage
+ *    runtimes ship NO `bin/java` at all (the app boots through its native launcher + libjli), so
+ *    recipe 1 is impossible there. Instead we relaunch the native launcher itself; the GUI facade
+ *    (`MainKt`) sees `--daemon` as its first arg and dispatches straight to the daemon entry point
+ *    before any AWT/Compose init. Runtime-set props travel as [PROP_ARG_PREFIX] args (a native
+ *    launcher can't take `-D` flags), and the launcher's own cfg re-applies the packaged
+ *    java-options for free. `apple.awt.UIElement` is set programmatically by the dispatch.
  *
  * The child is detached (its stdout/stderr append to [BossTermPaths.daemonLogFile]); the JVM does
  * not kill child processes on exit, so the daemon outlives the GUI — exactly what we want.
@@ -39,6 +48,36 @@ object DaemonLauncher {
      */
     const val DEFAULT_DAEMON_MAIN_CLASS = "ai.rever.bossterm.app.DaemonMainKt"
 
+    /** First program arg that makes the GUI facade (`MainKt`) run the daemon instead of the app. */
+    const val DAEMON_ARG = "--daemon"
+
+    /** Prefix for `--prop:key=value` program args carrying system props into a native-launcher daemon. */
+    const val PROP_ARG_PREFIX = "--prop:"
+
+    /** Props the daemon must agree with the GUI on; forwarded by both launch recipes when set. */
+    private val PASSTHROUGH_PROPS = listOf(
+        BossTermPaths.SETTINGS_DIR_PROPERTY, "bossterm.version", "compose.application.resources.dir",
+    )
+
+    /**
+     * Apply every [PROP_ARG_PREFIX] arg as a system property and return the remaining args.
+     * Called by the GUI facade's `--daemon` dispatch BEFORE the daemon entry point runs, so path
+     * and version resolution ([BossTermPaths] et al.) see the forwarded values. Explicit forwards
+     * intentionally override same-named props the packaged launcher cfg already set at JVM boot
+     * (the runtime-set value — e.g. a custom settings-dir profile — is the authoritative one).
+     */
+    fun applyPropArgs(args: Array<String>): Array<String> {
+        val rest = ArrayList<String>(args.size)
+        for (arg in args) {
+            if (!arg.startsWith(PROP_ARG_PREFIX)) { rest.add(arg); continue }
+            val kv = arg.removePrefix(PROP_ARG_PREFIX)
+            val eq = kv.indexOf('=')
+            if (eq > 0) System.setProperty(kv.take(eq), kv.substring(eq + 1))
+            else log.warn("Ignoring malformed prop arg: {}", arg)
+        }
+        return rest.toTypedArray()
+    }
+
     /**
      * Launch the daemon. Returns the spawned [Process] (already running, detached), or null if
      * the JRE couldn't be located. Callers then poll [BossTermPaths.daemonPortFile] /
@@ -53,8 +92,18 @@ object DaemonLauncher {
         mainClass: String = DEFAULT_DAEMON_MAIN_CLASS,
         extraArgs: List<String> = emptyList(),
     ): List<String>? {
-        val javaBin = resolveJavaBinary() ?: run {
-            log.error("DaemonLauncher: could not locate a java binary under java.home={}", System.getProperty("java.home"))
+        val javaBin = resolveJavaBinary()
+        if (javaBin == null) {
+            // Packaged bundles ship no java binary — relaunch the app's native launcher as the
+            // daemon instead. Only valid for the real daemon entry (the facade dispatch is
+            // hardwired to it), so a custom mainClass (tests) still requires a java binary.
+            if (mainClass == DEFAULT_DAEMON_MAIN_CLASS) {
+                nativeLauncherCommand(extraArgs)?.let { return it }
+            }
+            log.error(
+                "DaemonLauncher: no java binary under java.home={} and no packaged launcher found",
+                System.getProperty("java.home"),
+            )
             return null
         }
         val classpath = System.getProperty("java.class.path")
@@ -71,14 +120,88 @@ object DaemonLauncher {
             if (ShellCustomizationUtils.isMacOS()) add("-Dapple.awt.UIElement=true")
             // Propagate the props that affect path/resource/version resolution so the daemon
             // and GUI agree on settings dir, bundled-resource location, and reported version.
-            passthroughProp(BossTermPaths.SETTINGS_DIR_PROPERTY)?.let { add(it) }
-            passthroughProp("bossterm.version")?.let { add(it) }
-            passthroughProp("compose.application.resources.dir")?.let { add(it) }
+            PASSTHROUGH_PROPS.forEach { key -> passthroughProp(key)?.let { add(it) } }
             add("-cp")
             add(classpath)
             add(mainClass)
             addAll(extraArgs)
         }
+    }
+
+    /**
+     * `<native launcher> --daemon [--prop:key=value …]`, or null when not running from a packaged
+     * install. The GUI facade dispatches on [DAEMON_ARG] before any AWT init, and the launcher's
+     * cfg re-applies the packaged java-options; only runtime-resolved props need forwarding.
+     */
+    private fun nativeLauncherCommand(extraArgs: List<String>): List<String>? {
+        val launcher = packagedLauncherBinary() ?: return null
+        log.info("DaemonLauncher: no bundled java binary; using native launcher {}", launcher.absolutePath)
+        return buildList {
+            add(launcher.absolutePath)
+            add(DAEMON_ARG)
+            PASSTHROUGH_PROPS.forEach { key ->
+                System.getProperty(key)?.takeIf { it.isNotBlank() }?.let { add("$PROP_ARG_PREFIX$key=$it") }
+            }
+            addAll(extraArgs)
+        }
+    }
+
+    /**
+     * The packaged app's native launcher binary, derived from `java.home` per jpackage layout, or
+     * null in dev / unrecognized layouts. The per-OS derivations are pure functions of [javaHome]
+     * (no current-OS checks inside) so ALL of them are unit-tested regardless of the CI platform.
+     */
+    internal fun packagedLauncherBinary(
+        javaHome: String? = System.getProperty("java.home"),
+    ): File? {
+        val jh = javaHome?.takeIf { it.isNotBlank() } ?: return null
+        return when {
+            ShellCustomizationUtils.isMacOS() -> macLauncher(jh)
+            ShellCustomizationUtils.isWindows() -> windowsLauncher(jh)
+            ShellCustomizationUtils.isLinux() -> linuxLauncher(jh)
+            else -> null
+        }
+    }
+
+    /** macOS: `<Bundle>.app/Contents/runtime/Contents/Home` → `<Bundle>.app/Contents/MacOS/<Bundle>`. */
+    internal fun macLauncher(javaHome: String): File? {
+        val bundle = macBundleFile(javaHome) ?: return null
+        return pickLauncher(File(bundle, "Contents/MacOS"), bundle.name.removeSuffix(".app")) { it.canExecute() }
+    }
+
+    /** Windows: `<install>\runtime` → `<install>\<App>.exe` (launcher named after the install dir). */
+    internal fun windowsLauncher(javaHome: String): File? {
+        val home = File(javaHome)
+        if (!home.name.equals("runtime", ignoreCase = true)) return null
+        val install = home.parentFile ?: return null
+        return pickLauncher(install, install.name) { it.extension.equals("exe", ignoreCase = true) }
+    }
+
+    /** Linux: `<install>/lib/runtime` → `<install>/bin/<App>` (deb/rpm install dirs are lowercased). */
+    internal fun linuxLauncher(javaHome: String): File? {
+        val home = File(javaHome)
+        if (home.name != "runtime" || home.parentFile?.name != "lib") return null
+        val install = home.parentFile.parentFile ?: return null
+        return pickLauncher(File(install, "bin"), install.name) { it.canExecute() }
+    }
+
+    /**
+     * Pick the launcher from [dir]: the [executable] named [preferredName] (case-insensitive,
+     * extension ignored — jpackage names the main launcher after the app/install dir), else the
+     * directory's SOLE executable. With several candidates and no name match, refuse loudly —
+     * exec'ing a guess (an add-launcher, an uninstaller) is worse than failing.
+     */
+    private fun pickLauncher(dir: File, preferredName: String, executable: (File) -> Boolean): File? {
+        val candidates = dir.listFiles()?.filter { it.isFile && executable(it) }.orEmpty()
+        candidates.firstOrNull { it.nameWithoutExtension.equals(preferredName, ignoreCase = true) }?.let { return it }
+        candidates.singleOrNull()?.let { return it }
+        if (candidates.size > 1) {
+            log.warn(
+                "DaemonLauncher: multiple launcher candidates in {} and none named '{}': {}",
+                dir, preferredName, candidates.joinToString { it.name },
+            )
+        }
+        return null
     }
 
     fun spawn(
@@ -187,19 +310,33 @@ object DaemonLauncher {
     private fun macAppBundlePath(): String? {
         if (!ShellCustomizationUtils.isMacOS()) return null
         val jh = System.getProperty("java.home")?.takeIf { it.isNotBlank() } ?: return null
-        return if (jh.contains(".app/Contents/")) jh.substringBefore(".app/Contents/") + ".app" else null
+        return macBundleFile(jh)?.path
+    }
+
+    /** `<Bundle>.app` containing [path] (e.g. a bundled java.home), or null when not inside a bundle. */
+    private fun macBundleFile(path: String): File? {
+        // Normalize separators so the derivation stays a pure function of its input: real macOS
+        // paths always use '/', but the cross-OS unit tests feed platform-native paths (Windows
+        // CI passes '\'). File() converts back to the native separator on construction.
+        val p = path.replace('\\', '/')
+        return if (p.contains(".app/Contents/")) File(p.substringBefore(".app/Contents/") + ".app") else null
     }
 
     /** Launch the GUI in a normal (non-headless, non-agent) JVM via the same JRE + classpath. */
     private fun buildGuiCommand(): List<String>? {
-        val javaBin = resolveJavaBinary() ?: return null
+        val javaBin = resolveJavaBinary()
+        if (javaBin == null) {
+            // Packaged Windows/Linux: no bin/java (the same gap the daemon spawn has) — relaunch
+            // the native launcher as a plain GUI; its cfg re-applies the packaged java-options and
+            // --add-opens. Like the macOS `open <bundle>` path above, a runtime-set settings-dir
+            // profile is not forwarded (the GUI facade only parses --prop: args after --daemon).
+            return packagedLauncherBinary()?.let { listOf(it.absolutePath) }
+        }
         val classpath = System.getProperty("java.class.path")?.takeIf { it.isNotBlank() } ?: return null
         return buildList {
             add(javaBin.absolutePath)
             // GUI is a normal foreground app: do NOT pass headless or UIElement.
-            passthroughProp(BossTermPaths.SETTINGS_DIR_PROPERTY)?.let { add(it) }
-            passthroughProp("bossterm.version")?.let { add(it) }
-            passthroughProp("compose.application.resources.dir")?.let { add(it) }
+            PASSTHROUGH_PROPS.forEach { key -> passthroughProp(key)?.let { add(it) } }
             // Mirror the GUI launcher's AWT --add-opens (global hotkeys / window integration).
             add("--add-opens"); add("java.desktop/java.awt=ALL-UNNAMED")
             if (ShellCustomizationUtils.isMacOS()) { add("--add-opens"); add("java.desktop/sun.lwawt.macosx=ALL-UNNAMED") }
